# ai_agent_skills

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.agent/context/: agent_skills.md  ai_agent.md  memory.md
.agent/rules/: ai_coding_standards.md  (+2 more)
agent_skills/: README.md
docs/: ai_agent_practic_slides.md  ai_agent_skills_workshop.md  ai_agent_skills_workshop_outline.md  ai_agent_skills_workshop_slides.md  awesome-claude-skills-dev-summary.md  awesome-claude-skills-management-summary.md  fish-game-sea-king-spec.md  guide-skills-evaluation.md  skill-seeker-spec.md  skills-gap-enhancement-spec.md  skills-improvement-spec.md
kiro_agent/: README.md  __init__.py  __main__.py  backend_adapter.py  channel_router.py  config.py  context_guardian.py  cost_guard.py  dashboard.py  db.py  event_logger.py  fleet_manager.py  general_dispatcher.py  hang_detector.py  html_exporter.py  mcp_bridge.py  model_failover.py  models.py  pyproject.toml  requirements.txt  scheduler.py  voice_transcriber.py
kiro_agent/docs/: tutorial.md
kiro_agent/tests/unit/: test_backend_adapter.py  test_channel_router.py  test_cli.py  test_config.py  test_context_guardian.py  test_cost_guard.py  test_dashboard.py  test_event_logger.py  test_fleet_manager.py  test_general_dispatcher.py  test_hang_detector.py  test_html_exporter.py  test_kiro_cli_adapter.py  test_mcp_bridge.py  test_message_split.py  test_model_failover.py  test_models.py  test_scheduler.py  test_voice_transcriber.py
output/: Pdf Renderer + Html Template (fish Proposal)· html  skill-tapestry-index.md
(+262 files in other folders)
